Add ability to add a new listing for logged in users. On home page, show all listings as links.

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -3,5 +3,9 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    TODO
+    {% for listing in listings %}
+        <li>
+            <a href="{% url "listing" listing.id %}">{{ listing.title }}</a>
+        </li>
+    {% endfor %}
 {% endblock %}
