Add categories page and page for an individual category.  Add links between these pages and listings with a category

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -20,9 +20,11 @@
         TODO current price
     </div>
 
+    {% if category %}
     <div>
-        TODO category
+        Category: <a href="{% url "category" category %}">{{ category }}</a>
     </div>
+    {% endif %}
 
     <div>
         TODO bid or close auction
