Add ability to bid on and win auctions.  Listing posters can also close their auction when visiting the listing's page.

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -4,6 +4,7 @@
     <h2>Active Listings</h2>
 
     {% for listing in listings %}
+        {% if listing.open %}
         <li class="listing_div">
             <div class="img_div">
                 {% if listing.img_url %}
@@ -16,5 +17,6 @@
                 <div>Current Price: ${{ listing.price }}</div>
             </div>
         </li>
+        {% endif %}
     {% endfor %}
 {% endblock %}
